@@ -71,13 +71,29 @@ extern "C"
  ************************************************************************************/
 
 /************************************************************************************
+ * Name: lpc17_sspinitialize
+ *
+ * Description:
+ *   Initialize the selected SSP port.
+ *
+ * Input Parameter:
+ *   Port number (for hardware that has mutiple SPI interfaces)
+ *
+ * Returned Value:
+ *   Valid SPI device structure reference on succcess; a NULL on failure
+ *
+ ************************************************************************************/
+
+FAR struct spi_dev_s *lpc17_sspinitialize(int port);
+
+/************************************************************************************
  * Name:  lpc17_ssp0/ssp1select, lpc17_ssp0/ssp1status, and lpc17_ssp0/ssp1cmddata
  *
  * Description:
  *   These external functions must be provided by board-specific logic.  They are
  *   implementations of the select, status, and cmddata methods of the SPI interface
  *   defined by struct spi_ops_s (see include/nuttx/spi.h). All other methods 
- *   including up_spiinitialize()) are provided by common LPC17xx logic.  To use
+ *   including lpc17_sspinitialize()) are provided by common LPC17xx logic.  To use
  *   this common SPI logic on your board:
  *
  *   1. Provide logic in lpc17_boardinitialize() to configure SSP chip select pins.
@@ -88,9 +104,9 @@ extern "C"
  *      lpc17_ssp0/ssp1cmddata() functions in your board-specific logic.  These
  *      functions will perform cmd/data selection operations using GPIOs in the way
  *      your board is configured.
- *   3. Add a call to up_spiinitialize() in your low level application
+ *   3. Add a call to lpc17_sspinitialize() in your low level application
  *      initialization logic
- *   4. The handle returned by up_spiinitialize() may then be used to bind the
+ *   4. The handle returned by lpc17_sspinitialize() may then be used to bind the
  *      SSP driver to higher level logic (e.g., calling mmcsd_spislotinitialize(),
  *      for example, will bind the SSP driver to the SPI MMC/SD driver).
  *
