@@ -143,7 +143,7 @@ int nsh_archinitialize(void)
 
   /* Get the SSP port */
 
-  ssp = up_spiinitialize(CONFIG_NSH_MMCSDSPIPORTNO);
+  ssp = lpc17_sspinitialize(CONFIG_NSH_MMCSDSPIPORTNO);
   if (!ssp)
     {
       message("nsh_archinitialize: Failed to initialize SSP port %d\n",
